SERVER-55139 Fix documentation for MONGO_UNREACHABLE